--- a/index.html
+++ b/index.html
@@ -97,14 +97,14 @@
 					<a href="http://www.haohaoxuexitiantianxiangshang.com/" target="_blank">
 						<img src="images/works/github.png" alt="" width="300" height="180">
 						<div class="work-info">
-							<h2>好好学习 天天向上</h2>
+							<h2>好好学习-天天向上</h2>
 							<p><strong>开发时间</strong>：2020年6月 - 未来<br>
 							<strong>项目介绍</strong>：这个很特殊的一个项目，希望保持开源精神，在GitHub和博客上面分享自己的学习笔记和收获</p>
 						</div>
 					</a>
 				</div>
 				<div class="works-item first fade fade4">
-					<a href="http://97866.com/" target="_blank">
+					<a href="https://github.com/3293172751/course-design-of-database" target="_blank">
 						<img src="images/works/mypython.png" alt="" width="300" height="180">
 						<div class="work-info">
 							<h2>学籍管理系统</h2>
