--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					</a>
 				</div>
 				<div class="works-item fade fade3">
-					<a href="http://www.haohaoxuexitiantianxiangshang.com/" target="_blank">
+					<a href="https://github.com/3293172751/Block_Chain/" target="_blank">
 						<img src="images/works/github.png" alt="" width="300" height="180">
 						<div class="work-info">
 							<h2>好好学习-天天向上</h2>
